--- a/example.yml
+++ b/example.yml
@@ -10,17 +10,19 @@
 
 ### Configure non-virtual machines first, as the virtual machines might not be available yet
 
-- name: Configure apt sources for non-virtual machines
+- name: Perform essential configuration for non-virtual machines
   hosts: all:!localhost:!vms
   roles:
     - apt
+    - essential
 
 
 # Further non-VM config goes here
 
 ### Perform most of the actions above for the virtual machines that should be running now
 
-- name: Configure apt sources for virtual machines
+- name: Perform essential configuration for virtual machines
   hosts: vms
   roles:
     - apt
+    - essential
