--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Configure apt sources
   template: src=sources.list.j2 dest=/etc/apt/sources.list
-  notify:
-    - update_apt_sources
+#  notify:
+#    - update_apt_sources
+#  ^ commented out since the 'essential' role in the same play already forces an update
