--- a/roles/essential/tasks/main.yml
+++ b/roles/essential/tasks/main.yml
@@ -10,4 +10,4 @@
 
 - name: install packages
   apt: name={{ item }} state=present update_cache=yes install_recommends=no
-  with_items: packages
+  with_items: "{{ packages }}"
