--- a/roles/gateway/tasks/main.yml
+++ b/roles/gateway/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: install packages
   apt: name={{ item }} state=present update_cache=no install_recommends=no
-  with_items: packages
+  with_items: "{{ packages }}"
 
 - name: Enable IPv4 forwarding
   sysctl: name=net.ipv4.ip_forward value=1
