--- a/roles/vmhost/tasks/main.yml
+++ b/roles/vmhost/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: install packages
   apt: name={{ item }} state=present update_cache=no install_recommends=no
-  with_items: packages
+  with_items: "{{ packages }}"
