--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -28,3 +28,14 @@
 - name: Set root user known_hosts
   lineinfile: dest="/root/.ssh/known_hosts" regexp="^{{ item }} " line="{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}" create=yes
   with_items: "{{ groups.servers }}"
+
+- name: set root account private keys
+  copy: src=./secure/hosts/{{ inventory_hostname }}/id_{{ item }} dest=/root/.ssh/id_{{ item }} mode=0600
+  with_items:
+    - "{{ ssh_root_key_types }}"
+  when: "{{ secure_files_available|default(False) }}"
+
+- name: set root account public keys
+  copy: src=./files/hosts/{{ inventory_hostname }}/id_{{ item }}.pub dest=/root/.ssh/id_{{ item }}.pub
+  with_items:
+    - "{{ ssh_root_key_types }}"
