--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -4,14 +4,16 @@
 - name: copy private host keys
   copy: src=./secure/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key dest=/etc/ssh/ssh_host_{{ item }}_key mode=0600
   with_items: "{{ ssh_host_key_types }}"
-  when: "{{ secure_files_available|default(False) }}"
   notify: restart_ssh
+  tags:
+    - secure_files
 
 - name: copy public host keys
   copy: src=./files/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key.pub dest=/etc/ssh/ssh_host_{{ item }}_key.pub
   with_items: "{{ ssh_host_key_types }}"
-  when: "{{ secure_files_available|default(False) }}"
   notify: restart_ssh
+  tags:
+    - secure_files
 
 - name: set global known_hosts
   lineinfile: dest="/etc/ssh/ssh_known_hosts" regexp="^{{ item }} " line="{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}" create=yes
@@ -33,7 +35,8 @@
   copy: src=./secure/hosts/{{ inventory_hostname }}/id_{{ item }} dest=/root/.ssh/id_{{ item }} mode=0600
   with_items:
     - "{{ ssh_root_key_types }}"
-  when: "{{ secure_files_available|default(False) }}"
+  tags:
+    - secure_files
 
 - name: set root account public keys
   copy: src=./files/hosts/{{ inventory_hostname }}/id_{{ item }}.pub dest=/root/.ssh/id_{{ item }}.pub
