phpwebserver: Create php.ini for libapache-mod-php

--- a/roles/phpwebserver/tasks/main.yml
+++ b/roles/phpwebserver/tasks/main.yml
@@ -2,3 +2,6 @@
 - name: install packages
   apt: name={{ item }} state=present update_cache=no install_recommends=no
   with_items: "{{ packages }}"
+
+- name: configure PHP (apache)
+  template: src=php.ini.j2 dest=/etc/php5/apache2/php.ini
