--- a/roles/nvidia-graphics/tasks/main.yml
+++ b/roles/nvidia-graphics/tasks/main.yml
@@ -1,7 +1,6 @@
 ---
 - name: install kernel-released packages
-  #apt: name={{ item }} state=present default_release={{ kernel_release|default('stable') }} update_cache=no install_recommends=no
-  apt: name={{ item }} state=present default_release=jessie-backports update_cache=yes install_recommends=no
+  apt: name={{ item }} state=latest default_release=jessie-backports update_cache=yes install_recommends=no
   with_items: "{{ kernel_packages }}"
 
 - name: install packages
