--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -27,3 +27,10 @@
     - keys
     - ignore_missing: True
   when: "{{ not nfs_home }}"
+
+- name: set extra authorized hosts
+  authorized_key: user="{{ item.0.name }}" key="{{ lookup('file', './files/hosts/{{ item.1 }}/id_ed25519.pub') }}"
+  with_nested:
+    - "{{ extra_ssh_keys|default([]) }}"
+    - "{{ groups.all }}"
+  when: "{{ item.0.authorized_hostgroup is defined and item.1 in groups[item.0.authorized_hostgroup] }}"
