--- a/roles/dirvish/tasks/client.yml
+++ b/roles/dirvish/tasks/client.yml
@@ -2,17 +2,17 @@
 - set_fact: client_host={{ item }}
 
 - name: create root fs dirvish vault
-  file: path=/srv/backup/{{ client_host }}-root/dirvish state=directory
+  file: path=/srv/backup/{{ client_host }}/dirvish state=directory
 
 - name: configure root fs dirvish vault
-  template: src=default-root.conf.j2 dest=/srv/backup/{{ client_host }}-root/dirvish/default.conf
+  template: src=default-root.conf.j2 dest=/srv/backup/{{ client_host }}/dirvish/default.conf
 
 - name: create extra volumes dirvish vaults
-  file: path=/srv/backup/{{ client_host }}-{{ item.name }}/dirvish state=directory
+  file: path=/srv/backup/{{ client_host }}_{{ item.name }}/dirvish state=directory
   with_items: "{{ hostvars[client_host]['extra_volumes'] | default([]) }}"
   when: "{{ item.backup_exclude is not defined or not item.backup_exclude }}"
 
 - name: configure extra volumes dirvish vaults
-  template: src=default-volume.conf.j2 dest=/srv/backup/{{ client_host }}-{{ item.name }}/dirvish/default.conf
+  template: src=default-volume.conf.j2 dest=/srv/backup/{{ client_host }}_{{ item.name }}/dirvish/default.conf
   with_items: "{{ hostvars[client_host]['extra_volumes'] | default([]) }}"
   when: "{{ item.backup_exclude is not defined or not item.backup_exclude }}"
