ssh: Add delegated tasks, clean up syntax, other small improvements

--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,44 +1,64 @@
 ---
-# Currently doesn't actually install sshd yet
-
 - name: copy private host keys
-  copy: src=./secure/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key dest=/etc/ssh/ssh_host_{{ item }}_key mode=0600
+  copy:
+    src: "./secure/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key"
+    dest: "/etc/ssh/ssh_host_{{ item }}_key"
+    mode: "0600"
   with_items: "{{ ssh_host_key_types }}"
   notify: restart_ssh
   tags:
     - secure_files
 
 - name: copy public host keys
-  copy: src=./files/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key.pub dest=/etc/ssh/ssh_host_{{ item }}_key.pub
+  copy:
+    src: "./files/hosts/{{ inventory_hostname }}/ssh_host_{{ item }}_key.pub"
+    dest: "/etc/ssh/ssh_host_{{ item }}_key.pub"
   with_items: "{{ ssh_host_key_types }}"
   notify: restart_ssh
   tags:
     - secure_files
 
 - name: set global known_hosts
-  lineinfile: dest="/etc/ssh/ssh_known_hosts" regexp="^{{ item }} " line="{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}" create=yes
-  with_items: "{{ groups.servers }}"
+  lineinfile:
+    dest: "/etc/ssh/ssh_known_hosts"
+    regexp: "^{{ item }} "
+    line: "{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}"
+    create: yes
+  with_items: "{{ groups[ssh_neighbour_group|default('servers')] }}"
 
 - name: create root user SSH dir
-  file: path=/root/.ssh mode=0700 state=directory
+  file:
+    path: "/root/.ssh"
+    mode: "0700"
+    state: directory
 
 - name: set root authorized_keys
-  authorized_key: user=root key="{{ item }}"
-  with_items: "{{ root_authorized_keys }}"
-  when: "{{ root_authorized_keys is defined }}"
+  authorized_key:
+    user: root
+    key: "{{ root_authorized_keys|join('\n') }}"
+    exclusive: yes
 
-- name: Set root user known_hosts
-  lineinfile: dest="/root/.ssh/known_hosts" regexp="^{{ item }} " line="{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}" create=yes
-  with_items: "{{ groups.servers }}"
+- name: set root user known_hosts
+  lineinfile:
+    dest: "/root/.ssh/known_hosts"
+    regexp: "^{{ item }} "
+    line: "{{ item }} {{ lookup('file', './files/hosts/{{ item }}/ssh_host_ecdsa_key.pub') }}"
+    create: yes
+  with_items: "{{ groups[ssh_neighbour_group|default('servers')] }}"
 
 - name: set root account private keys
-  copy: src=./secure/hosts/{{ inventory_hostname }}/id_{{ item }} dest=/root/.ssh/id_{{ item }} mode=0600
+  copy:
+    src: "./secure/hosts/{{ inventory_hostname }}/id_{{ item }}"
+    dest: "/root/.ssh/id_{{ item }}"
+    mode: "0600"
   with_items:
     - "{{ ssh_root_key_types }}"
   tags:
     - secure_files
 
 - name: set root account public keys
-  copy: src=./files/hosts/{{ inventory_hostname }}/id_{{ item }}.pub dest=/root/.ssh/id_{{ item }}.pub
+  copy:
+    src: "./files/hosts/{{ inventory_hostname }}/id_{{ item }}.pub"
+    dest: "/root/.ssh/id_{{ item }}.pub"
   with_items:
     - "{{ ssh_root_key_types }}"
